// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Story Page A11y I can see the skip to content link 1`] = `"Tsallaka zuwa abubuwan da ke ciki"`;

exports[`AMP Story Page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP Story Page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Story Page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=51&p=hausa.news.story.23246985.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Acps%3Acurie%3Aasset%3A142c7232-ebaf-2d4e-8e70-6b68dda2f199]&x2=[amp]&x3=[news-hausa]&x4=[ha]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[article]&x8=[simorgh]&x9=[%C6%8Aan%C9%97ano%3A%2520Kuskure%2520a%2520Hausa%2520da%2520%C6%98a%E2%80%99idar%2520hira%2520da%2520ba%C6%99%C3%AC%2520-%2520%C6%81%2520%C9%93%2520%C9%97%2520%C6%8A%2520%C6%99%2520%C6%98%2520-%2520BBC%2520News%2520Hausa]&x11=[2019-08-20T12%3A21%3A00.000Z]&x12=[2019-08-20T12%3A21%3A00.000Z]&ref=\${documentReferrer}",
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Story Page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "STY",
    "domain": "test.bbc.co.uk",
    "sections": "Hausa, Hausa - STY",
    "title": "Ɗanɗano: Kuskure a Hausa da Ƙa’idar hira da baƙì - Ɓ ɓ ɗ Ɗ ƙ Ƙ",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Story Page Analytics comscore 1`] = `
{
  "extraUrlParams": {
    "comscorekw": "amp",
  },
  "vars": {
    "c2": "17986528",
  },
}
`;

exports[`AMP Story Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Hausa",
  "url": "/hausa",
}
`;

exports[`AMP Story Page Footer Anchors should match text and url 2`] = `
{
  "text": "Me ya sa za ku iya aminta da BBC",
  "url": "https://www.bbc.com/hausa/game-da-mu-49283501",
}
`;

exports[`AMP Story Page Footer Anchors should match text and url 3`] = `
{
  "text": "Sharuddan yin amfani",
  "url": "https://www.bbc.com/hausa/game-da-mu-37377086",
}
`;

exports[`AMP Story Page Footer Anchors should match text and url 4`] = `
{
  "text": "A game da BBC",
  "url": "https://www.bbc.com/hausa/game-da-mu-37377088",
}
`;

exports[`AMP Story Page Footer Anchors should match text and url 5`] = `
{
  "text": "Ka'idojin tsare sirri",
  "url": "https://www.bbc.com/hausa/game-da-mu-37377090",
}
`;

exports[`AMP Story Page Footer Anchors should match text and url 6`] = `
{
  "text": "Ka'idoji",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Story Page Footer Anchors should match text and url 7`] = `
{
  "text": "Tuntubi BBC",
  "url": "https://www.bbc.co.uk/hausa/send/u50853335",
}
`;

exports[`AMP Story Page Footer Anchors should match text and url 8`] = `
{
  "text": "Karanta hanyoyin da muke bi dangane da adireshin waje.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP Story Page Footer Cookie Settings Button should match text and on handler 1`] = `
{
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "Do not share or sell my info",
}
`;

exports[`AMP Story Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/hausa"`;

exports[`AMP Story Page Footer Paragraphs should match text 1`] = `"© 2024 BBC. BBC ba za ta dauki alhakin abubuwan da wasu shafukan daban suka wallafa ba.  Karanta hanyoyin da muke bi dangane da adireshin waje."`;

exports[`AMP Story Page Header I can see the branding 1`] = `"BBC News, Hausa"`;

exports[`AMP Story Page Header Navigation link should match text and url 1`] = `
{
  "text": "Labaran Duniya",
  "url": "/hausa",
}
`;

exports[`AMP Story Page Header Navigation link should match text and url 2`] = `
{
  "text": "Wasanni",
  "url": "/hausa/topics/cz74kjgv220t",
}
`;

exports[`AMP Story Page Header Navigation link should match text and url 3`] = `
{
  "text": "Nishadi",
  "url": "/hausa/topics/cg726kz37wdt",
}
`;

exports[`AMP Story Page Header Navigation link should match text and url 4`] = `
{
  "text": "Cikakkun Rahotanni",
  "url": "/hausa/52140979",
}
`;

exports[`AMP Story Page Header Navigation link should match text and url 5`] = `
{
  "text": "Bidiyo",
  "url": "/hausa/topics/cn09qmz4jryt",
}
`;

exports[`AMP Story Page Header Navigation link should match text and url 6`] = `
{
  "text": "Shirye-shirye na Musamman",
  "url": "/hausa/shirye-shirye-na-musamman-54712348",
}
`;

exports[`AMP Story Page Header Navigation link should match text and url 7`] = `
{
  "text": "Shirye-shiryen rediyo",
  "url": "/hausa/topics/c4nx34q5724t",
}
`;

exports[`AMP Story Page Image Caption should match text 1`] = `"Bayanan sautiमुंबई इंडियन्सला आता दुसऱ्या क्वॉलिफायर लढतीत खेळावे लागणार आहे."`;

exports[`AMP Story Page Image should match snapshot 1`] = `
<noscript>
  &lt;div&gt;&lt;img alt="" src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01b7w9z.jpg.webp" srcSet="https://ichef.test.bbci.co.uk/images/ic/240xn/p01b7w9z.jpg.webp 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01b7w9z.jpg.webp 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01b7w9z.jpg.webp 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01b7w9z.jpg.webp 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01b7w9z.jpg.webp 800w" aria-hidden="true" class="bbc-1ukiuui"/&gt;&lt;div class="bbc-1mgo2mg"&gt;&lt;strong class="bbc-pow7hy"&gt;Na&#x27;urarku na da matsalar sauraren sauti&lt;/strong&gt;&lt;/div&gt;&lt;/div&gt;
</noscript>
`;

exports[`AMP Story Page Main heading should match text 1`] = `"Ɗanɗano: Kuskure a Hausa da Ƙa’idar hira da baƙì - Ɓ ɓ ɗ Ɗ ƙ Ƙ"`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/hausa/images/icons/icon-192x192.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hausa/images/icons/icon-72x72.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hausa/images/icons/icon-96x96.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hausa/images/icons/icon-128x128.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hausa/images/icons/icon-144x144.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hausa/images/icons/icon-152x152.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hausa/images/icons/icon-180x180.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hausa/images/icons/icon-192x192.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hausa/images/icons/icon-384x384.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hausa/images/icons/icon-512x512.png",
}
`;

exports[`AMP Story Page SEO Canonical link 1`] = `"http://localhost:7080/hausa/labarai-23246985"`;

exports[`AMP Story Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP Story Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Story Page SEO Heading level 1 1`] = `"Ɗanɗano: Kuskure a Hausa da Ƙa’idar hira da baƙì - Ɓ ɓ ɗ Ɗ ƙ Ƙ"`;

exports[`AMP Story Page SEO Lang attribute 1`] = `"ha"`;

exports[`AMP Story Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "NewsArticle",
      "author": {
        "@type": "Person",
        "name": "Kalkidan Yibeltal",
      },
      "dateModified": "2019-08-20T12:21:00.000Z",
      "datePublished": "2019-08-20T12:21:00.000Z",
      "description": "French football fans sing God Save The Queen ahead of the match between France and England in tribute to the victims of attacks in London and Manchester.",
      "headline": "Ɗanɗano: Kuskure a Hausa da Ƙa’idar hira da baƙì - Ɓ ɓ ɗ Ɗ ƙ Ƙ",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.bbci.co.uk/news/1024/branded_hausa/1745C/test/_63542359_hi035712328.jpg",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ha",
        "name": "Hausa",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/hausa/labarai-23246985",
        "@type": "WebPage",
        "name": "Ɗanɗano: Kuskure a Hausa da Ƙa’idar hira da baƙì - Ɓ ɓ ɗ Ɗ ƙ Ƙ",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/hausa.png",
          "width": 1024,
        },
        "name": "BBC News Hausa",
        "publishingPrinciples": "https://www.bbc.com/hausa/game-da-mu-49283501",
      },
      "thumbnailUrl": "https://ichef.bbci.co.uk/news/1024/branded_hausa/1745C/test/_63542359_hi035712328.jpg",
      "url": "http://localhost:7080/hausa/labarai-23246985",
    },
  ],
}
`;

exports[`AMP Story Page SEO Linked data should match text 2`] = `
{
  "@context": "http://schema.org",
  "@type": "AudioObject",
  "description": "मुंबई इंडियन्सला आता दुसऱ्या क्वॉलिफायर लढतीत खेळावे लागणार आहे.",
  "duration": "PT16S",
  "embedURL": "https://www.test.bbc.com/hausa/av-embeds/labarai-23246985/vpid/p01b7w2z",
  "name": "पुणे सुपरजायंट्स आयपीएलच्या अंतिम फेरीत!",
  "thumbnailUrl": "https://ichef.test.bbci.co.uk/images/ic/1024x576/p01b7w9z.jpg",
  "uploadDate": "2017-05-22T15:38:23.000Z",
}
`;

exports[`AMP Story Page SEO OG description 1`] = `"French football fans sing God Save The Queen ahead of the match between France and England in tribute to the victims of attacks in London and Manchester."`;

exports[`AMP Story Page SEO OG image 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_hausa/1745C/test/_63542359_hi035712328.jpg"`;

exports[`AMP Story Page SEO OG image alt 1`] = `"hai;le"`;

exports[`AMP Story Page SEO OG locale 1`] = `"ha-GH"`;

exports[`AMP Story Page SEO OG site name 1`] = `"BBC News Hausa"`;

exports[`AMP Story Page SEO OG title 1`] = `"Ɗanɗano: Kuskure a Hausa da Ƙa’idar hira da baƙì - Ɓ ɓ ɗ Ɗ ƙ Ƙ - BBC News Hausa"`;

exports[`AMP Story Page SEO OG type 1`] = `"article"`;

exports[`AMP Story Page SEO OG url 1`] = `"http://localhost:7080/hausa/labarai-23246985"`;

exports[`AMP Story Page SEO Page title 1`] = `"Ɗanɗano: Kuskure a Hausa da Ƙa’idar hira da baƙì - Ɓ ɓ ɗ Ɗ ƙ Ƙ - BBC News Hausa"`;

exports[`AMP Story Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP Story Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Story Page SEO Twitter creator 1`] = `"@bbchausa"`;

exports[`AMP Story Page SEO Twitter description 1`] = `"French football fans sing God Save The Queen ahead of the match between France and England in tribute to the victims of attacks in London and Manchester."`;

exports[`AMP Story Page SEO Twitter image alt 1`] = `"hai;le"`;

exports[`AMP Story Page SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_hausa/1745C/test/_63542359_hi035712328.jpg"`;

exports[`AMP Story Page SEO Twitter site 1`] = `"@bbchausa"`;

exports[`AMP Story Page SEO Twitter title 1`] = `"Ɗanɗano: Kuskure a Hausa da Ƙa’idar hira da baƙì - Ɓ ɓ ɗ Ɗ ƙ Ƙ - BBC News Hausa"`;

exports[`AMP Story Page Timestamp should match text and date 1`] = `
{
  "date": "2019-08-20",
  "text": "20 Agusta 2019",
}
`;
